# Optimum

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  README.md
cmake/: Dependencies.cmake  ExternalEigen.cmake  ExternalGoogleTest.cmake  Externals.cmake  OptimumVersion.cmake
examples/: CMakeLists.txt  main.cpp
optimum/: CMakeLists.txt
optimum/include/optimum/: geneticalgorithm.h  icp.h  neldermead.h  utils.h
optimum/include/optimum/evolutionary/: genetic.h  selection.h  termination.h
optimum/test/: genetic.cpp  test.cpp
src/: CMakeLists.txt  Doxyfile  Main.cpp  geneticalgorithm.cpp  geneticalgorithm.h  icp.h  neldermead.cpp  neldermead.h  optimizer.h  test.cpp  utils.h
